# EnxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VulkanProject.sln
Assets/: imgui.ini
Assets/shaders/: compile.bat
Enxel/: CMakeLists.txt  Enxel.cpp  Enxel.h  copyResources.cmake  pchEnxel.h
Enxel/Core/Utility/: Timer.cpp  Timer.h
Enxel/Platform/Window/: CMakeLists.txt  Window.h
Enxel/Platform/Window/Linux/: WindowLinux.cpp  WindowLinux.h
Enxel/Platform/Window/Windows/: WindowWin.cpp  WindowWin.h
Enxel/Renderer/: Buffer.cpp  Buffer.h  BufferLayout.h  CMakeLists.txt  IRenderer.h  RendererAPI.cpp  RendererAPI.h
Enxel/Renderer/Camera/src/: Camera.cpp
Enxel/Renderer/Vulkan/: CMakeLists.txt  Chunk.h  Vertex.h  Voxel.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  vk_engine.cpp  vk_engine.h
Enxel/Renderer/Vulkan/include/Vulkan/: VulkanRenderer.h  vk_engine.h
Enxel/Renderer/Vulkan/src/: VulkanRenderer.cpp
Enxel/Window/: Window.h
Enxel/Window/Windows/: WindowWin.cpp  WindowWin.h
Enxel/World/: Chunk.cpp  Chunk.h  PerlinNoise.cpp  PerlinNoise.h  Voxel.cpp  Voxel.h  World.cpp  World.h  WorldSettings.h
Enxel/World/include/World/: Chunk.h  Voxel.h
Enxel/include/: Enxel.h
Enxel/src/: Enxel.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
VulkanProject/: VulkanProject.vcxproj  main.cpp
VulkanProject/x64/Debug/: VulkanProject.exe.recipe  VulkanProject.ilk  vc143.idb
VulkanProject/x64/Debug/VulkanProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VulkanProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
engine/: CMakeLists.txt
engine/include/: vk_engine.h
engine/include/Vulkan/: Vertex.h  vk_engine.h
engine/include/World/: Terrain.h
engine/src/: vk_engine.cpp
engine/src/Vulkan/: vk_engine.cpp
renderer/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
